--- a/10.js_ninth/H5滚屏/index.css
+++ b/10.js_ninth/H5滚屏/index.css
@@ -5,7 +5,7 @@
 html,body{
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    overflow: hidden;/*防止网页出现滚动条*/
 }
 #main{
     width: 640px;
