--- a/10.js_ninth/H5滚屏/index.css
+++ b/10.js_ninth/H5滚屏/index.css
@@ -5,7 +5,7 @@
 html,body{
     width: 100%;
     height: 100%;
-    overflow: hidden;/*防止网页出现滚动条*/
+    overflow: hidden;/*和user-scalable = no一样,防止网页出现滚动条*/
 }
 #main{
     width: 640px;
@@ -14,8 +14,8 @@ html,body{
     left:50%;
     top:0;
     margin-left:-320px;
-    transform-origin: top;
     -webkit-transform-origin: top;/*改变缩放的基准点由top开始缩放,由于index中transform默认基准点是中心点*/
+    transform-origin: top;
 }
 #list li{
     width: 100%;
@@ -51,18 +51,18 @@ html,body{
 
 }
 .a1 p:nth-child(even){
-    transform: translate(500px,0);
     -webkit-transform: translate(500px,0);
+    transform: translate(500px,0);
 }
 .a1 p:nth-child(odd){
-    transform: translate(-500px,0);
     -webkit-transform: translate(-500px,0);
+    transform: translate(-500px,0);
 }
 #a1 p{
-    transform: translate(0,0);
     -webkit-transform: translate(0,0);
-    transition:1s;
+    transform: translate(0,0);
     -webkit-transition:1s;
+    transition:1s;
 }
 .a2 p{
     width: 90px;
@@ -118,10 +118,10 @@ html,body{
     top: 70%;
 }
 #a2 p {
-    transform:rotate(720deg);
     -webkit-transform:rotate(720deg);
-    transition: 1s;
+    transform:rotate(720deg);
     -webkit-transition: 1s;
+    transition: 1s;
 }
 .a3{
     width: 460px;
@@ -133,10 +133,10 @@ html,body{
     background: url(images/d1.png) no-repeat;
 }
 #a3{
-    transform: rotateY(720deg);
     -webkit-transform: rotateY(720deg);
-    transition: 0.5s;
+    transform: rotateY(720deg);
     -webkit-transition: 0.5s;
+    transition: 0.5s;
 
 }
 .a4 p{
@@ -165,8 +165,8 @@ html,body{
 #a4 p{
     width: 200px;
     height: 100px;
-    transition: 1s;
     -webkit-transition: 1s;
+    transition: 1s;
 }
 
 
