--- a/10.js_ninth/1.mobile-templetes/1.2公共Css与Bug.css
+++ b/10.js_ninth/1.mobile-templetes/1.2公共Css与Bug.css
@@ -72,3 +72,22 @@ http://blog.csdn.net/liu__hua/article/details/40106595
 http://blog.sina.com.cn/s/blog_7f95e24b0101los4.html
 http://www.android100.org/html/201405/20/10807.html
 */
+
+/*定义滚动条高宽及背景 高宽分别对应横竖滚动条的尺寸 ,也可以直接display:none让其不显示*/
+::-webkit-scrollbar{
+    width: 16px;
+    height: 16px;
+    background-color: #F5F5F5;
+}
+/*定义滚动条轨道 内阴影+圆角*/
+::-webkit-scrollbar-track{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+/*定义滑块 内阴影+圆角*/
+::-webkit-scrollbar-thumb{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #555;
+}
